bundle: unused files warning, clean start script, inject NODE_ENV in a process context

--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
 	"author": "svetaet",
 	"license": "MIT",
 	"scripts": {
-		"start": "yarn build && yarn npm-run-all --parallel watch server",
-		"build": "yarn webpack --config webpack.config.js",
-		"watch": "yarn build --watch",
-		"server": "nodemon dist/index.js",
+		"start": "yarn build --mode=development --watch",
+		"build": "webpack --config webpack.config.js",
 		"ts": "tsc --watch",
 		"lint": "eslint ./**/*",
 		"fix": "eslint ./**/* --fix"
@@ -25,11 +23,11 @@
 		"eslint-plugin-prettier": "^3.1.2",
 		"husky": "^4.2.3",
 		"lint-staged": "^10.1.1",
-		"nodemon": "^2.0.2",
-		"npm-run-all": "^4.1.5",
+		"nodemon-webpack-plugin": "^4.3.1",
 		"pnp-webpack-plugin": "^1.6.4",
 		"prettier": "^2.0.2",
 		"typescript": "^3.8.3",
+		"unused-files-webpack-plugin": "^3.4.0",
 		"webpack": "^4.42.1",
 		"webpack-bundle-analyzer": "^3.6.1",
 		"webpack-cli": "^3.3.11",
